--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
